...
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="club_name">Endava Poker Club</string>
    <string name="email_hint">example@endava.com</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="password_hint">myPassword</string>
    <string name="sign_in">Sign in</string>
    <string name="signout">Sign out</string>
    <string name="loading">loading</string>
    <string name="name">Name</string>
    <string name="debt">Debt</string>
...
